# df-lab-cli

./: .gitignore  ARCHITECTURE.md  CODING_PROMPT.md  README.md  pyproject.toml
Specs/: race_index.yaml
Specs/Configs/: CreatureIndex.txt
Specs/Configs/Creatures/: DWARF.txt  DWARF.yaml  ELF.txt  ELF.yaml  HUMAN.txt  HUMAN.yaml
Specs/Race/: human.yaml
Tests/: test_constants.py  test_smoke.py
dflab/: main.py
dflab/Core/: constants.py  loader.py
dflab/core/: .constants.py.kate-swp  constants.py  loader.py
dflab_cli/: __main__.py  main.py  probe.py
dflab_cli/commands/: generate.py  validate.py
dflab_cli/core/: generator.py  loader.py  validator.py
scripts/: check_repo_size.py
specs/: species_index.yaml
specs/species/: human.yaml
tests/: conftest.py  test_constants.py  test_smoke.py
