[project]
name = "df-lab-cli"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["dflab*"]
exclude = ["specs*", "Store*", "tests*"]

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = true

[tool.ruff]
line-length = 100
target-version = "py311"
# Enable: pycodestyle (E), pyflakes (F), isort (I) for imports, and a few quality rules.
select = ["E", "F", "I", "UP", "B"]
# You’re using Black for formatting; let Ruff focus on linting/fixes that don't fight Black.
ignore = ["E203", "E266"]  # E203/E266 are style nits Black already decides
fix = true

[tool.ruff.lint.isort]
# Keep imports tidy but compatible with Black
combine-as-imports = true
force-sort-within-sections = true

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
# If you have src/ layout, uncomment:
# extraPaths = ["src"]

# Optional: tell tools which dirs to ignore
[tool.ruff.lint]
exclude = [
  ".venv",
  "build",
  "dist",
  "__pycache__"
]
